...
    var copiedURL: URL? {
        return self.syncURL
    }

    private var syncURL: URL? {
        if let string = UIPasteboard.general.string,
            let url = URL(string: string), url.isWebPage() {
            return url
        } else {
            return nil
        }
    }

...
